# weather

./: .gitignore  LICENSE  README.md  stack.yaml  weather-hs.cabal
src/: App.hs  CommandLine.hs  Configuration.hs  Location.hs  Main.hs  Weather.hs
src/Weather/: WeatherUnderground.hs
