name:                weather-hs
version:             0.1.0.0
synopsis:            Command line client for simple weather data access
description:         Please see README.md
homepage:            https://github.com/SamProtas/weather-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Protas
maintainer:          sam.protas@gmail.com
copyright:           2017 Sam Protas
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weather
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Configuration
                     , Location
                     , App
                     , CommandLine
                     , Weather
                     , Weather.WeatherUnderground
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , http-client
                     , http-conduit
                     , http-client-tls
                     , exceptions
                     , safe-exceptions
                     , mtl
                     , argparser == 0.3.4
                     , unordered-containers
