name:                weather-hs
version:             0.1.0.0
synopsis:            Command line client for simple weather data access
description:         Please see README.md
homepage:            https://github.com/SamProtas/weather-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Protas
maintainer:          sam.protas@gmail.com
copyright:           2017 Sam Protas
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weather
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Configuration
                     , Location
                     , App
                     , CommandLine
                     , Weather
                     , Weather.WeatherUnderground
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text == 1.2.2.1
                     , bytestring
                     , aeson == 0.11.2.1
                     , aeson-pretty == 0.8.2
                     , http-client == 0.4.31.2
                     , http-conduit == 2.1.11
                     , http-client-tls == 0.2.4.1
                     , exceptions == 0.8.3
                     , safe-exceptions == 0.1.4.0
                     , mtl == 2.2.1
                     , argparser == 0.3.4
                     , unordered-containers == 0.2.7.1
